# bwscoin

./: .gitignore  .travis.yml  COMMANDS.md  CONTRIBUTING.md  COPYING  INSTALL.md  Makefile.am  README.md  berkley.sh  configure.ac  libbwscoinconsensus.pc.in
.tx/: config
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrdb.h  addrman.h  amount.h  arith_uint256.h  base58.h  blockencodings.h  bloom.h  bwscoin-block-generator-res.rc  bwscoin-block-generator.cpp  bwscoin-cli-res.rc  bwscoin-cli.cpp  bwscoin-tx-res.rc  bwscoin-tx.cpp  bwscoind-res.rc  bwscoind.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.h  chainparamsseeds.h  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coins.cpp  coins.h  compat.h  compressor.h  core_io.h  core_memusage.h  core_write.cpp  cuckoocache.h  dbwrapper.cpp  dbwrapper.h  fs.h  (+76 more)
src/bench/: .gitignore  bench.h  verify_script.cpp
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  sanity.h  strnlen.cpp
src/config/: bitcoin-config.h
src/consensus/: consensus.h  merkle.cpp  merkle.h  params.h  tx_verify.cpp  tx_verify.h  validation.h
src/crypto/: aes.h  chacha20.h  common.h  hmac_sha256.h  hmac_sha512.h  ripemd160.h  sha1.h  sha256.h  sha512.h
src/ml/: taskinfo_client.cpp  taskinfo_client.h  verification_client.cpp  verification_client.h
src/ml/transactions/: actor_type.cpp  actor_type.h  buy_ticket_tx.cpp  buy_ticket_tx.h  join_task_tx.cpp  join_task_tx.h  ml_tx_helpers.cpp  ml_tx_helpers.h  ml_tx_size.cpp  ml_tx_size.h  ml_tx_type.cpp  ml_tx_type.h  pay_for_task_tx.cpp  pay_for_task_tx.h  revoke_ticket_tx.cpp  revoke_ticket_tx.h
src/policy/: feerate.cpp  feerate.h  fees.cpp  fees.h  policy.h  rbf.h
src/primitives/: block.cpp  block.h  transaction.h
src/qt/: Makefile  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.h  bwscoin.cpp  bwscoin.qrc  bwscoin_locale.qrc  bwscoinaddressvalidator.cpp  bwscoinaddressvalidator.h  bwscoinamountfield.cpp  bwscoinamountfield.h  bwscoingui.cpp  bwscoingui.h  bwscoinstrings.cpp  bwscoinunits.cpp  bwscoinunits.h  callback.h  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.h  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macnotificationhandler.h  macnotificationhandler.mm  modaloverlay.h  networkstyle.cpp  networkstyle.h  notificator.h  (+53 more)
src/qt/forms/: addressbookpage.ui  coincontroldialog.ui  debugwindow.ui  helpmessagedialog.ui  modaloverlay.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: bwscoin_af.ts  bwscoin_af_ZA.ts  bwscoin_ar.ts  bwscoin_be_BY.ts  bwscoin_bg.ts  bwscoin_bg_BG.ts  bwscoin_ca.ts  bwscoin_ca@valencia.ts  bwscoin_ca_ES.ts  bwscoin_cs.ts  bwscoin_cy.ts  bwscoin_da.ts  bwscoin_de.ts  bwscoin_el.ts  bwscoin_el_GR.ts  bwscoin_en.ts  bwscoin_en_GB.ts  bwscoin_eo.ts  bwscoin_es.ts  bwscoin_es_AR.ts  bwscoin_es_CL.ts  bwscoin_es_CO.ts  bwscoin_es_DO.ts  bwscoin_es_ES.ts  bwscoin_es_MX.ts  bwscoin_es_UY.ts  bwscoin_es_VE.ts  bwscoin_et.ts  bwscoin_et_EE.ts  bwscoin_eu_ES.ts  bwscoin_fa.ts  bwscoin_fa_IR.ts  bwscoin_fi.ts  bwscoin_fr.ts  bwscoin_fr_CA.ts  bwscoin_fr_FR.ts  bwscoin_gl.ts  bwscoin_he.ts  bwscoin_hi_IN.ts  bwscoin_hr.ts  (+46 more)
src/qt/res/: bwscoin-qt-res.rc
src/qt/test/: Makefile  compattests.cpp  compattests.h  paymentrequestdata.h  paymentservertests.cpp  paymentservertests.h  rpcnestedtests.cpp  rpcnestedtests.h  test_main.cpp  uritests.cpp  uritests.h  wallettests.cpp  wallettests.h
src/rpc/: blockchain.cpp  blockchain.h  client.cpp  client.h  mining.cpp  mining.h  misc.cpp  ml.cpp  net.cpp  protocol.cpp  protocol.h  rawtransaction.cpp  register.h  safemode.h  server.cpp  server.h  task_info.cpp
src/script/: bws_data_classifier.h  bwscoinconsensus.cpp  bwscoinconsensus.h  interpreter.cpp  interpreter.h  ismine.h  script.h  script_error.h  sigcache.h  sign.h  standard.cpp  standard.h
src/script/structured_data/: structured_data.cpp  structured_data.h  structured_data_class.cpp  structured_data_class.h  structured_data_version.cpp  structured_data_version.h
src/secp256k1/: Makefile.am
src/secp256k1/contrib/: lax_der_parsing.h
src/stake/: extendedvotebits.h  hash256prng.h  hasher.h  stakenode.h  stakepoolfee.h  staketx.h  votebits.h
src/stake/treap/: tickettreap.h  treapnode.h  value.h
src/support/: cleanse.h  events.h  lockedpool.cpp  lockedpool.h
src/support/allocators/: secure.h  zeroafterfree.h
src/test/: DoS_tests.cpp  Makefile  README.md  addrman_tests.cpp  allocator_tests.cpp  amount_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bip32_tests.cpp  blockencodings_tests.cpp  bloom_tests.cpp  bswap_tests.cpp  checkqueue_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  cuckoocache_tests.cpp  dbwrapper_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_io_tests.cpp  key_tests.cpp  limitedmap_tests.cpp  lottery_tests.cpp  main_tests.cpp  mempool_tests.cpp  merkle_tests.cpp  merkleblock_tests.cpp  miner_tests.cpp  multisig_tests.cpp  net_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  policyestimator_tests.cpp  pow_tests.cpp  prevector_tests.cpp  raii_event_tests.cpp  random_tests.cpp  (+29 more)
src/test/data/: README.md  key_io_invalid.json  key_io_valid.json  sighash.json
src/univalue/lib/: univalue_escapes.h
src/wallet/: coincontrol.h  crypter.h  db.h  feebumper.h  fees.h  init.h  rpcdump.cpp  rpcwallet.cpp  rpcwallet.h  wallet.cpp  wallet.h  walletdb.h
src/wallet/auto-revoker/: autorevoker.h  autorevokerconfig.h
src/wallet/auto-voter/: autovoter.h  autovoterconfig.h
src/wallet/test/: crypto_tests.cpp  wallet_stake_test_fixture.h  wallet_test_fixture.h  wallet_tests.cpp
src/zmq/: zmqabstractnotifier.h  zmqconfig.h  zmqnotificationinterface.h  zmqpublishnotifier.h
(+257 files in other folders)
